fix card alignment in dashboard

--- a/src/app/Dashboard/index.css
+++ b/src/app/Dashboard/index.css
@@ -37,6 +37,7 @@
   flex-grow: 1;
   display: flex;
   flex-wrap: wrap;
+  align-content: flex-start;
 }
 
 .dashboard-header {
